WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58794
Web Inspector: Hyperlink Auditing (ping) requests are not shown in network panel
https://bugs.webkit.org/show_bug.cgi?id=58794
Summary
Web Inspector: Hyperlink Auditing (ping) requests are not shown in network panel
Vsevolod Vlasov
Reported
2011-04-18 09:53:39 PDT
Hyperlink Auditing (ping) requests are not shown in network panel.
http://www.whatwg.org/specs/web-apps/current-work/multipage/links.html#hyperlink-auditing
Attachments
Patch draft (No tests)
(9.90 KB, patch)
2011-04-18 09:55 PDT
,
Vsevolod Vlasov
no flags
Details
Formatted Diff
Diff
Patch
(13.65 KB, patch)
2011-04-22 15:17 PDT
,
Vsevolod Vlasov
no flags
Details
Formatted Diff
Diff
Patch (pings in DRT enabled)
(12.85 KB, patch)
2011-04-26 02:54 PDT
,
Vsevolod Vlasov
eric
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from cr-jail-4
(203.47 KB, application/zip)
2011-04-26 22:29 PDT
,
WebKit Commit Bot
no flags
Details
Patch with fixes
(12.97 KB, patch)
2011-04-27 03:01 PDT
,
Vsevolod Vlasov
no flags
Details
Formatted Diff
Diff
Patch (rebaselined)
(13.01 KB, patch)
2011-04-28 03:29 PDT
,
Vsevolod Vlasov
pfeldman
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Patch (rebaselined again)
(13.00 KB, patch)
2011-04-29 03:03 PDT
,
Vsevolod Vlasov
pfeldman
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Patch (rebaselined)
(13.01 KB, patch)
2011-04-29 04:16 PDT
,
Vsevolod Vlasov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Vsevolod Vlasov
Comment 1
2011-04-18 09:55:58 PDT
Created
attachment 90046
[details]
Patch draft (No tests)
Vsevolod Vlasov
Comment 2
2011-04-22 15:17:32 PDT
Created
attachment 90775
[details]
Patch
Nate Chapin
Comment 3
2011-04-25 15:26:12 PDT
Comment on
attachment 90775
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=90775&action=review
This is awesome :) I don't know the inspector well enough to review the implementation, but one quick test comment:
> LayoutTests/platform/chromium/test_expectations.txt:676 > +// Chromium DumpRenderTree does not send hyperlink auditing (ping) requests > +WONTFIX SKIP : http/tests/inspector/network/ping.html = FAIL > +
See
http://trac.webkit.org/browser/trunk/LayoutTests/http/tests/navigation/ping-same-origin.html
for how to enable pings in DRT.
Vsevolod Vlasov
Comment 4
2011-04-26 02:54:39 PDT
Created
attachment 91085
[details]
Patch (pings in DRT enabled) Thanks Nate, This test works now in chromium now. It is strange though that it worked in safari even without this setting enabled.
Nate Chapin
Comment 5
2011-04-26 12:56:58 PDT
(In reply to
comment #4
)
> Created an attachment (id=91085) [details] > Patch (pings in DRT enabled) > > Thanks Nate, > > This test works now in chromium now. > It is strange though that it worked in safari even without this setting enabled.
It appears the mac ports at least are now defaulting to hyperlink auditing enabled. We should eventually switch chromium DRT's default setting to match chromium itself (though we should still force the preference on in this layout test, since not every platform defaults hyperlink auditing to on).
Eric Seidel (no email)
Comment 6
2011-04-26 16:20:14 PDT
Comment on
attachment 91085
[details]
Patch (pings in DRT enabled) This seems fine.
Joseph Pecoraro
Comment 7
2011-04-26 16:23:11 PDT
Comment on
attachment 91085
[details]
Patch (pings in DRT enabled) View in context:
https://bugs.webkit.org/attachment.cgi?id=91085&action=review
Neat patch.
> Source/WebCore/inspector/front-end/Resource.js:857 > + return "text/ping" == this.requestContentType();
Nit (style): Almost always use "===" in JavaScript. We encourage it in Web Inspector code.
WebKit Commit Bot
Comment 8
2011-04-26 22:29:49 PDT
Comment on
attachment 91085
[details]
Patch (pings in DRT enabled) Rejecting
attachment 91085
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-4', 'build-..." exit_code: 2 Last 500 characters of output: ests/xmlhttprequest ................................................................................................................................................................................ http/tests/xmlhttprequest/web-apps ............... http/tests/xmlhttprequest/workers ........... http/tests/xmlviewer . http/tests/xmlviewer/dumpAsText ............ 736.44s total testing time 23391 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 14 test cases (<1%) had stderr output Full output:
http://queues.webkit.org/results/8514094
WebKit Commit Bot
Comment 9
2011-04-26 22:29:53 PDT
Created
attachment 91232
[details]
Archive of layout-test-results from cr-jail-4 The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: cr-jail-4 Port: Mac Platform: Mac OS X 10.6.6
Vsevolod Vlasov
Comment 10
2011-04-27 03:01:43 PDT
Created
attachment 91261
[details]
Patch with fixes This seems to fix it.
Vsevolod Vlasov
Comment 11
2011-04-28 03:29:36 PDT
Created
attachment 91460
[details]
Patch (rebaselined)
WebKit Commit Bot
Comment 12
2011-04-28 10:50:58 PDT
Comment on
attachment 91460
[details]
Patch (rebaselined) Rejecting
attachment 91460
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-8', 'apply-..." exit_code: 2 Last 500 characters of output: h fuzz 3. patching file LayoutTests/http/tests/inspector/network/ping-expected.txt patching file LayoutTests/http/tests/inspector/network/ping.html patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. Original content of Source/WebCore/English.lproj/localizedStrings.js mismatches at /mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply line 274. Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--reviewer', u'Pavel Feldman', u'--fo..." exit_code: 9 Full output:
http://queues.webkit.org/results/8519443
Vsevolod Vlasov
Comment 13
2011-04-29 03:03:19 PDT
Created
attachment 91658
[details]
Patch (rebaselined again)
WebKit Commit Bot
Comment 14
2011-04-29 03:06:14 PDT
Comment on
attachment 91658
[details]
Patch (rebaselined again) Rejecting
attachment 91658
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-4', 'apply-..." exit_code: 2 Last 500 characters of output: angeLog patching file LayoutTests/http/tests/inspector/network/ping-expected.txt patching file LayoutTests/http/tests/inspector/network/ping.html patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. Original content of Source/WebCore/English.lproj/localizedStrings.js mismatches at /mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply line 274. Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--reviewer', u'Pavel Feldman', u'--fo..." exit_code: 255 Full output:
http://queues.webkit.org/results/8514990
Vsevolod Vlasov
Comment 15
2011-04-29 04:16:15 PDT
Created
attachment 91663
[details]
Patch (rebaselined)
WebKit Commit Bot
Comment 16
2011-04-29 04:43:40 PDT
Comment on
attachment 91663
[details]
Patch (rebaselined) Clearing flags on attachment: 91663 Committed
r85316
: <
http://trac.webkit.org/changeset/85316
>
WebKit Commit Bot
Comment 17
2011-04-29 04:43:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug